# data_lake

./: .dockerignore  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 03ee80d94e80_adiciona_indices_na_tabela_items.py
scripts/: wait_for_db.py
src/app/: config.py  crud.py  dashboard.py  database.py  main.py  models.py  populate_db.py  repository.py  schemas.py
